@@ -58,6 +58,7 @@ Fixes
     argument. The directives parsed into bonds, angles, impropers, and dihedrals now
     match TPRParser. (PR #2408)
   * Added parmed to setup.py
+  * Fixed example docs for polymer persistence length (#2582)
 
 Enhancements
   * New analysis.hole2 module for HOLE interfacing. Contains a function (hole) 
